# crucible

./: Cargo.toml
backend/: Cargo.toml  README.md
backend/src/: error.rs  lib.rs  main.rs
backend/src/api/handlers/: contracts.rs  dashboard.rs  mod.rs  profiling.rs
backend/src/api/middleware/: logging.rs  mod.rs
backend/src/config/: mod.rs  observability.rs  tests.rs
backend/src/services/: analytics_aggregator.rs  business_metrics.rs  circuit_breaker.rs  error_recovery.rs  event_indexer.rs  feature_flags.rs  mod.rs  rollback.rs  sys_metrics.rs  tracing.rs
backend/src/test_utils/: factories.rs
backend/src/utils/: errors.rs  logger.rs  mod.rs
backend/src/workers/: mod.rs  retry.rs
backend/tests/: api_tests.rs  build_metrics_tests.rs  config_tests.rs  contract_integration_tests.rs  dashboard_tests.rs  retry_integration_tests.rs  tracing_integration.rs
backend/tests/integration/: api_profile_test.rs  api_status_test.rs  mod.rs
backend/tests/load/: profile_load.rs  status_load.rs
contracts/crucible/src/: env.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/insurance/: Cargo.toml
contracts/insurance/src/: lib.rs
contracts/oracle/: Cargo.toml
contracts/oracle/src/: lib.rs
frontend/src/: App.tsx
