[package]
name = "backend"
version = "0.1.0"
edition = "2021"
description = "Backend API server for the Crucible smart contract testing platform"
license = "MIT"
authors = ["Crucible Contributors"]
publish = false

[[bin]]
name = "crucible-backend"
path = "src/main.rs"

[[bin]]
name = "backup"
path = "src/bin/backup.rs"

[features]
default = []
testutils = ["mockall"]

[dependencies]
# Web framework & HTTP
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "request-id"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database (PostgreSQL via SQLx)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "macros", "migrate", "rust_decimal"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "1.0"
anyhow = "1.0"
rust_decimal = { version = "1.35", features = ["serde", "db-postgres"] }
rust_decimal_macros = "1.35"
arc-swap = "1.7"
stellar-xdr = { version = "21.0", features = ["std"] }
base64 = "0.22"
validator = { version = "0.19", features = ["derive"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Background jobs
apalis = { version = "0.6" }
apalis-redis = "0.6"

# Observability / Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.24", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.24", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["trace", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.16"
tracing-opentelemetry = "0.25"
tonic = "0.12"

# Optional dependencies
mockall = { version = "0.13", optional = true }

# API Docs
utoipa = { version = "5.0", features = ["axum_extras", "chrono", "uuid", "decimal"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }
tower_governor = "0.4"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
testcontainers = "0.16"
wiremock = "0.6"
criterion = { version = "0.5", features = ["async_tokio"] }
mime = "0.3"
hyper = { version = "1.0", features = ["full"] }
async-trait = "0.1"
mockall = "0.13"

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "dashboard_bench"
harness = false
